QAccessibleComboBox: Cleanup comboBox() calls

Handle comboBox() returning nullptr.
Avoid repeated qobject_cast by calling comboBox() once per function.

Fixes: QTBUG-115161
Change-Id: I3d102cebe807da379fa4d9ee2aee1e72b8fdf004
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit fc556e3571b7e2d7fe307778b17e6cf0ff9e1bfc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 718bb11701e768c64cb68cfca48baab2cc2e1727)
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit bc97aa94daab1083b182844de7c193b316b82473)